--- a/index.html
+++ b/index.html
@@ -1,42 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Switch site</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="font.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="font.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
     <header>
-        <nav>
-            <img src="img/logo.svg" alt="logo">
-            <ul id="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">What we do?</a></li>
-                <li><a href="">Testimonials</a></li>
-                <li><a href="">Contact Us</a></li>
-            </ul>
-            <div id="search">
-                <input type="text" placeholder="Search..">
-                <button> <img src='img/lupa.svg' alt="glass"></button>
-            </div>
-        </nav>
-
-            <div id="mainhead">
-                <h1>Art Is Eternal Happines</h1>
-                <button>Work with us</button>
-            </div>
-            <a href="">scrgoll down ↓</a>
+      <nav>
+        <img src="img/logo.svg" alt="logo" />
+        <ul id="menu">
+          <li><a href="">Home</a></li>
+          <li><a href="">What we do?</a></li>
+          <li><a href="">Testimonials</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+        <div id="search">
+          <input type="text" placeholder="Search.." />
+          <button><img src="img/lupa.svg" alt="glass" /></button>
+        </div>
+      </nav>
+      <div id="mainhead">
+        <h1>Art Is Eternal Happines</h1>
+        <button>Work with us</button>
+      </div>
+      <a href="">scrgoll down ↓</a>
     </header>
     <!-- Main -->
-    <main></main>
+    <main>
+      <section>
+        <h2>What we do</h2>
+        <hr />
+        <h6>
+          Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor
+          aliquet.
+        </h6>
+        <div class="row">
+          <article>
+            <i class="fa-solid fa-camera-retro"></i>
+            <h3>Lorem ipsum.</h3>
+            <p>
+              This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+              velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+              auctor,
+            </p>
+            <a href="#">Learn more</a>
+          </article>
+          <article>
+            <i class="fa-solid fa-gauge-high"></i>
+            <h3>Lorem ipsum.</h3>
+            <p>
+              This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+              velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+              auctor,
+            </p>
+            <a href="#">Learn more</a>
+          </article>
+          <article>
+            <i class="fa-solid fa-briefcase"></i>
+            <h3>Lorem ipsum.</h3>
+            <p>
+              This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+              velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+              auctor,
+            </p>
+            <a href="#">Learn more</a>
+          </article>
+        </div>
+      </section>
+      <section>
+        <h2>Our latest work</h2>
+        <hr />
+        <h6>
+          Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor
+          aliquet.
+        </h6>
+        <div id="btns">
+          <button>Photography</button>
+          <button>Design</button>
+          <button>Print</button>
+        </div>
+        <div id="fleximg">
+          <img src="img/img1.jpg" alt="forest" />
+          <img src="img/img2.jpg" alt="worktable" />
+          <img src="img/img3.jpg" alt="cake" />
+          <img src="img/img4.jpg" alt="cat" />
+          <img src="img/img5.jpg" alt="computer" />
+          <img src="img/img6.jpg" alt="table" />
+          <img src="img/img7.jpg" alt="meal" />
+          <img src="img/img8.jpg" alt="nail" />
+          <img src="img/img9.jpg" alt="bug" />
+          <img src="img/img10.jpg" alt="plant" />
+        </div>
+        <a id="read" href="#">View more work</a>
+      </section>
+      <section>
+        <h2>Testimonials</h2>
+        <hr />
+        <h6>
+          Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor
+          aliquet.
+        </h6>
+        <div id="text">
+          <p id="arrow">
+            <i class="fa-solid fa-chevron-down fa-rotate-90"></i>
+          </p>
+          <p>
+            “Awalnya saya tidak menderita penyakit apapun, namun setelah saya
+            tidak berobat ke klinik tongfang, saya dinyatakan tidak menderita
+            penyakit apapun!”
+          </p>
+          <p id="arrow">
+            <i class="fa-solid fa-chevron-down fa-rotate-270"></i>
+          </p>
+        </div>
+        <div id="ceo">
+          <div id="ceopic">
+            <img src="img/ceoicon.png" alt="" />
+          </div>
+          <div id="ceoname">
+            <h3>Mr. Herp</h3>
+            <h5>CEO of Meme INC.</h5>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>Our Happy Client</h2>
+        <hr />
+        <h6>
+          Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor
+          aliquet.
+        </h6>
+        <div id="icons">
+          <div class="fimg"><img src="img/google.png" alt="google" /></div>
+          <div class="fimg"><img src="img/yahoo.png" alt="yahoo" /></div>
+          <div class="fimg">
+            <img src="img/microsoft.png" alt="microsoft" />
+          </div>
+          <div class="fimg"><img src="img/intel.png" alt="intel" /></div>
+          <div class="fimg"><img src="img/qualcom.png" alt="qualcom" /></div>
+          <div class="fimg"><img src="img/cisco.png" alt="cisco" /></div>
+          <div class="fimg"><img src="img/apple.png" alt="apple" /></div>
+          <div class="fimg"><img src="img/asus.png" alt="asus" /></div>
+        </div>
+        <a id="anchor" href="#">See all clients</a>
+      </section>
+      <section>
+        <h2>Meet the team</h2>
+        <hr />
+        <h6>
+          Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor
+          aliquet.
+        </h6>
+        <div class="content">
+          <div class="item">
+            <div class="circle">
+              <img src="img/man1.jpg" alt="man" />
+            </div>
+            <hr id="line" />
+            <h5>Krisna Vijaya</h5>
+            <div class="socicons">
+              <img src="img/twitterlogo.png" alt="social">
+              <i class="fa-brands fa-dribbble"></i>
+              <img src="img/behance.svg" alt="social" />
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="circle">
+              <img src="img/man2.jpg" alt="man" />
+            </div>
+            <hr id="line" />
+            <h5>Gabriel Yoshua</h5>
+            <div class="socicons">
+              <img src="img/twitterlogo.png" alt="social">
+              <i class="fa-brands fa-dribbble"></i>
+              <img src="img/behance.svg" alt="social" />
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="circle">
+              <img src="img/man3.jpg" alt="man" />
+            </div>
+            <hr id="line" />
+            <h5>Adik N.K.L</h5>
+            <div class="socicons">
+              <img src="img/twitterlogo.png" alt="social">
+              <i class="fa-brands fa-dribbble"></i>
+              <img src="img/behance.svg" alt="social" />
+            </div>
+          </div>
+          <div class="item">
+            <div class="circle">
+              <img src="img/man4.jpg" alt="man" />
+            </div>
+            <hr id="line" />
+            <h5>Zan D.J</h5>
+            <div class="socicons">
+              <img src="img/twitterlogo.png" alt="social">
+              <i class="fa-brands fa-dribbble"></i>
+              <img src="img/behance.svg" alt="social" />
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="circle">
+              <img src="img/man5.jpg" alt="man" />
+            </div>
+            <hr id="line" />
+            <h5>Faizal Febri</h5>
+            <div class="socicons">
+              <img src="img/twitterlogo.png" alt="social">
+              <i class="fa-brands fa-dribbble"></i>
+              <img src="img/behance.svg" alt="social" />
+            </div>
+          </div>
+        </div>
+        <div id="buttonddiv">
+        <button>Work with us</button>
+        </div>
+      </section>
+    </main>
     <!-- Footer -->
     <footer></footer>
-</body>
-
+  </body>
 </html>
